Fixed Docker-Compose file.    owlsoul/ytproxy instead of ytproxy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ networks:
 
 services:
   server:
-    image: ytproxy:latest
+    image: owlsoul/ytproxy:latest
     environment:
       - PYTHONUNBUFFERED=1
     networks:
