More PEP8 dictatorship    - Renamed module folder.

--- a/tests/Dockerfile-testing
+++ b/tests/Dockerfile-testing
@@ -68,7 +68,7 @@ RUN useradd transport_proxy --home /home/transport_proxy --shell /bin/bash
 RUN mkdir -p /home/transport_proxy
 
 # Copying the project
-ADD YandexTransportCore/ /home/transport_proxy/YandexTransportCore
+ADD yandex_transport_core/ /home/transport_proxy/yandex_transport_core
 ADD transport_proxy.py /home/transport_proxy
 
 # Copying tests
